--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250517</version>
+        </dependency>
 
 <!--        logging-->
         <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
